--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -223,11 +223,24 @@
 
         <FrameLayout
             android:id="@+id/cameraView"
-            android:layout_width="322dp"
-            android:layout_height="201dp"
+            android:layout_width="269dp"
+            android:layout_height="193dp"
             android:layout_span="3"
             android:gravity="center_horizontal"
             android:visibility="visible" />
     </TableRow>
+
+    <Button
+        android:id="@+id/photoButton"
+        android:layout_width="89dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="43dp"
+        android:text="PHOTO"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.065"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.069" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
